--- a/styles/app.css
+++ b/styles/app.css
@@ -6,13 +6,30 @@ body {
   background-repeat: no-repeat;
 }
 
+h2 {
+  font-family: sans-serif;
+  color: cornsilk;
+}
+
+button {
+ margin-top: 25px;
+ margin-right: 30px;
+ margin-left: 10px;
+ width: 75px;
+}
+
 .card {
   float: left;
   width: 100px;
   border-radius: 5px;
   height: 140px;
   margin-right: 20px;
+}
 
+.container {
+  margin: auto;
+  width: 700px;
+  height: 400px
 }
 
 .covered {
@@ -21,4 +38,46 @@ body {
 
 .hand {
   overflow: auto;
+}
+
+.blink_me {
+    position: absolute;
+    z-index: 1000;
+    color: darkmagenta;
+    top:40%;
+    font-size: 150px;
+    font-style: italic;
+    font-weight: bolder;
+    -webkit-animation-name: blinker;
+    -webkit-animation-duration: 0.5s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+
+    -moz-animation-name: blinker;
+    -moz-animation-duration: 0.5s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-iteration-count: infinite;
+
+    animation-name: blinker;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@-moz-keyframes blinker {
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+}
+
+@-webkit-keyframes blinker {
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+}
+
+@keyframes blinker {
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
 }
